--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,15 @@
 
     button,
     .button {
-        @apply relative bg-gray-900 text-white px-10 py-4 rounded-full inline-block transform scale-100 font-semibold transition duration-100 ease-in-out shadow-lg
+        @apply relative bg-gray-900 text-white px-10 py-4 rounded-full inline-block transform scale-100 font-semibold transition duration-100 ease-out shadow-lg
+    }
+
+    a:not(.button) {
+        @apply transition duration-100 ease-out
+    }
+
+    a:not(.button):hover {
+        @apply opacity-50
     }
 
     button:hover,
@@ -25,5 +33,14 @@
 @layer components {
     .container {
         @apply px-6 mx-auto
+    }
+}
+
+@layer utilities {
+    .underline-thin {
+        background-image: linear-gradient(to bottom, #A3AAB5 100%, transparent 0%);
+        background-position: 0 100%;
+        background-repeat: repeat-x;
+        background-size: 1px 1px;
     }
 }
