--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
     }
 
     hr {
-        @apply bg-gray-400;
+        @apply bg-gray-500;
     }
 
     button,
@@ -38,8 +38,8 @@
 
 @layer utilities {
     .underline-thin {
-        background-image: linear-gradient(to bottom, #A3AAB5 100%, transparent 0%);
-        background-position: 0 100%;
+        background-image: linear-gradient(to bottom, #cbd5e0 100%, transparent 0%);
+        background-position: 0 95%;
         background-repeat: repeat-x;
         background-size: 1px 1px;
     }
