--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
     body {
-        @apply font-degular bg-neutral-50 text-neutral-800;
+        @apply font-degular bg-neutral-100 text-neutral-800;
     }
 
     button:hover,
@@ -12,15 +12,11 @@
         @apply bg-gray-800 transform scale-105
     }
 
-    .blockquote p {
-        @apply font-sans not-italic font-normal !important;
-    }
-
 }
 
 @layer components {
     .container {
-        @apply px-6 md:px-16 lg:px-40 mx-auto
+        @apply px-6 md:px-16 mx-auto max-w-5xl
     }
 
     .textLink {
