--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@
 
 @layer components {
     .container {
-        @apply px-6 md:px-16 mx-auto max-w-5xl
+        @apply px-6 md:px-16 mx-auto max-w-5xl lg:max-w-7xl
     }
 
     .textLink {
@@ -22,9 +22,15 @@
         @apply text-blue-500;
     }
 
-    .slides .slick-prev {
-        left: 150px;
-        z-index: 100;
+    .workSlider .slick-dots {
+        bottom: 8% !important;
+    }
+
+    .workSlider .slick-dots li button:before {
+        font-size: 10px;
+    }
+    .workSlider .slick-dots li.slick-active button:before {
+        font-size: 14px;
     }
 }
 
