--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,6 +73,11 @@
 
 @layer utilities {
     .aspect-16x9 {
-        padding-bottom: 56.25%
+        padding-bottom: 56.25%;
+        @apply relative;
+    }
+
+    .aspect-16x9 iframe {
+        @apply absolute top-0 left-0 w-full h-full;
     }
 }
