--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,14 +4,14 @@
 
 @layer base {
     body {
-        @apply font-degular bg-neutral-100 text-neutral-900 dark:bg-neutral-900 dark:text-neutral-100;
+        @apply font-degular bg-white text-neutral-900 dark:bg-neutral-900 dark:text-white;
     }
 
     ::selection {
-        @apply bg-neutral-900 text-white dark:bg-neutral-100 dark:text-neutral-900;
+        @apply bg-neutral-900 text-white dark:bg-white dark:text-neutral-900;
       }
     ::-moz-selection {
-        @apply bg-neutral-900 text-white dark:bg-neutral-100 dark:text-neutral-900;
+        @apply bg-neutral-900 text-white dark:bg-white dark:text-neutral-900;
     }
 
 }
