--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,7 +38,7 @@
 
 @layer components {
     .container {
-        @apply px-6 md:px-16 mx-auto max-w-5xl lg:px-8 lg:max-w-7xl
+        @apply px-6 sm:px-12 md:px-16 mx-auto max-w-5xl 2xl:px-8 lg:max-w-7xl
     }
 
     .textLink {
