--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,7 @@
     }
 
     .h3 {
-        @apply font-bold font-degular text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl
+        @apply font-bold font-degular text-2xl lg:text-3xl xl:text-4xl
     }
 
     .h4 {
