--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@
     }
 
     .h2 {
-        @apply text-3xl sm:text-4xl md:text-5xl font-bold
+        @apply text-3xl leading-none sm:text-4xl sm:leading-none md:text-5xl md:leading-none font-bold
     }
 
     .h3 {
