--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,22 +1,47 @@
 @import 'tailwindcss';
+@plugin '@tailwindcss/typography';
 
-@config '../tailwind.config.js';
+@theme {
+  --color-link-light-default: #1867FF;
+  --color-link-light-hover: #0400CD;
+  --color-link-dark-default: #4081FF;
+  --color-link-dark-hover: #68A4FF;
 
-/*
-  The default border color has changed to `currentcolor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
+  --color-moss-50: #f6f8f5;
+  --color-moss-100: #e9f1e7;
+  --color-moss-200: #d5e2d0;
+  --color-moss-300: #b3caab;
+  --color-moss-400: #8aa97f;
+  --color-moss-500: #65885a;
+  --color-moss-600: #527148;
+  --color-moss-700: #425a3b;
+  --color-moss-800: #374932;
+  --color-moss-900: #2e3d2a;
+  --color-moss-950: #171f14;
 
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
+  --font-text: system-ui;
+  --font-display: degular, system-ui;
+}
+
 @layer base {
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentcolor);
+  h1, h2, h3, h4, .h1, .h2, .h3, .h4 {
+      @apply font-display
+  }
+
+  .h1 {
+      @apply font-bold leading-none text-4xl sm:text-5xl md:text-6xl 2xl:text-7xl
+  }
+
+  .h2 {
+      @apply font-bold leading-none text-3xl sm:text-4xl md:text-5xl
+  }
+
+  .h3 {
+      @apply font-bold text-2xl lg:text-3xl xl:text-4xl
+  }
+
+  .h4 {
+      @apply font-semibold text-sm uppercase tracking-wider text-neutral-600 dark:text-neutral-500;
   }
 }
 
@@ -24,271 +49,110 @@
   @apply px-6 sm:px-12 md:px-16 mx-auto max-w-5xl 2xl:px-8 lg:max-w-7xl;
 }
 
-@utility textLink {
-  @apply text-link-light-default dark:text-link-dark-default underline underline-offset-4;
+@layer components {
+  .textLink {
+    color: var(--color-link-light-default);
+    @apply underline underline-offset-4;
 
-  &:hover {
-    @apply text-link-light-hover dark:text-link-dark-hover;
-  }
-}
-
-@utility workSlider {
-  & .slick-track {
-    display: flex;
-    align-items: center;
-  }
-  & .slick-track .slick-slide {
-    display: flex;
-    height: auto;
-    align-items: center;
-    justify-content: center;
-  }
-
-  & .slick-dots {
-    bottom: 8% !important;
-  }
-
-  & .slick-dots li button:before {
-    font-size: 10px;
-    @apply text-black dark:text-white;
-  }
-  & .slick-dots li.slick-active button:before {
-    font-size: 14px;
-    @apply text-black dark:text-white;
-  }
-}
-
-@utility slick-track {
-  .workSlider & {
-    display: flex;
-    align-items: center;
-  }
-
-  .testimonialSlider & {
-    display: flex;
-    align-items: center;
-  }
-  .workSlider & .slick-slide {
-    display: flex;
-    height: auto;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-@utility testimonialSlider {
-  & .slick-track {
-    display: flex;
-    align-items: center;
-  }
-  & .stlick-track .slick-slide {
-    display: flex;
-    height: auto;
-    align-items: center;
-    justify-content: center;
-  }
-
-  & .slick-dots {
-    bottom: 8% !important;
-  }
-
-  & .slick-dots li button:before {
-    font-size: 10px;
-    @apply text-black;
-  }
-  & .slick-dots li.slick-active button:before {
-    font-size: 14px;
-    @apply text-black;
-  }
-}
-
-@utility slick-slide {
-  .workSlider .slick-track & {
-    display: flex;
-    height: auto;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .testimonialSlider .stlick-track & {
-    display: flex;
-    height: auto;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-@utility stlick-track {
-  .testimonialSlider & .slick-slide {
-    display: flex;
-    height: auto;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-@utility slick-dots {
-  .workSlider & {
-    bottom: 8% !important;
-  }
-
-  .testimonialSlider & {
-    bottom: 8% !important;
-  }
-
-  .workSlider & li button:before {
-    font-size: 10px;
-    @apply text-black dark:text-white;
-  }
-  .workSlider & li.slick-active button:before {
-    font-size: 14px;
-    @apply text-black dark:text-white;
-  }
-
-  .testimonialSlider & li button:before {
-    font-size: 10px;
-    @apply text-black;
-  }
-  .testimonialSlider & li.slick-active button:before {
-    font-size: 14px;
-    @apply text-black;
-  }
-}
-
-@utility slick-active {
-  .workSlider .slick-dots &li button:before {
-    font-size: 14px;
-    @apply text-black dark:text-white;
-  }
-  .testimonialSlider .slick-dots &li button:before {
-    font-size: 14px;
-    @apply text-black;
-  }
-}
-
-@utility bgSlider {
-  @apply absolute w-full h-full;
-
-  & .slick-list {
-    @apply h-full;
-  }
-
-  & .slick-list .slick-slider {
-    @apply h-full;
-  }
-  & .slick-list .slick-slider > div {
-    @apply h-full;
-  }
-  & .slick-list .slick-slider > div > div {
-    @apply h-full;
-  }
-}
-
-@utility slick-list {
-  .bgSlider & {
-    @apply h-full;
-  }
-
-  .bgSlider & .slick-slider {
-    @apply h-full;
-  }
-  .bgSlider & .slick-slider > div {
-    @apply h-full;
-  }
-  .bgSlider & .slick-slider > div > div {
-    @apply h-full;
-  }
-}
-
-@utility slick-slider {
-  .bgSlider .slick-list & {
-    @apply h-full;
-  }
-  .bgSlider .slick-list & > div {
-    @apply h-full;
-  }
-  .bgSlider .slick-list & > div > div {
-    @apply h-full;
-  }
-}
-
-@utility callout-list {
-  & ul li::marker {
-    @apply text-yellow-400;
-  }
-}
-
-@utility aspect-16x9 {
-  padding-bottom: 56.25%;
-  @apply relative;
-
-  & iframe {
-    @apply absolute top-0 left-0 w-full h-full;
-  }
-}
-
-@utility scanlines {
-  @apply bg-[repeating-linear-gradient(#F0F0F0,#F0F0F0_2px,#FFFFFF_2px,#FFFFFF_4px)] dark:bg-[repeating-linear-gradient(#222222,#222222_2px,#000000_2px,#000000_4px)];
-}
-
-@layer base {
-    body {
-        @apply font-system bg-white text-neutral-900 dark:bg-neutral-900 dark:text-white;
+    @variant hover {
+      color: var(--color-link-light-hover);
     }
 
-    h1, h2, h3, .h1, .h2, .h3 {
-        @apply font-degular
-    }
+    @variant dark {
+      color: var(--color-link-dark-default);
 
-    .h1 {
-        @apply font-bold text-4xl leading-none sm:text-5xl sm:leading-none md:text-6xl md:leading-none 2xl:text-7xl 2xl:leading-none
-    }
-
-    .h2 {
-        @apply text-3xl leading-none sm:text-4xl sm:leading-none md:text-5xl md:leading-none font-bold
-    }
-
-    .h3 {
-        @apply font-bold font-degular text-2xl lg:text-3xl xl:text-4xl
-    }
-
-    .h4 {
-        @apply uppercase font-degular tracking-wider font-semibold text-neutral-600 dark:text-neutral-500 text-sm;
-    }
-
-    ::selection {
-        @apply bg-neutral-900 text-white dark:bg-white dark:text-neutral-900;
+      @variant hover {
+        color: var(--color-link-dark-hover);
       }
-    ::-moz-selection {
-        @apply bg-neutral-900 text-white dark:bg-white dark:text-neutral-900;
     }
+  }
 
-    .prose blockquote {
-        @apply my-12 lg:my-16 font-normal not-italic text-neutral-500 dark:text-neutral-400 pl-8 lg:pl-10 border-l-4 border-yellow-300 dark:border-yellow-400;
-    }
+  .workSlider .slick-track,
+  .testimonialSlider .slick-track {
+    display: flex !important;
+    align-items: center;
+  }
 
-    .prose blockquote p {
-        @apply relative;
-    }
+  .workSlider .slick-track .slick-slide,
+  .testimonialSlider .stlick-track .slick-slide {
+    display: flex !important;
+    height: auto !important;
+    align-items: center;
+    justify-content: center;
+  }
 
-    .prose blockquote p:before {
-        @apply absolute -left-2 font-normal;
-    }
+  .workSlider .slick-dots,
+  .testimonialSlider .slick-dots {
+    bottom: 8% !important;
+  }
 
-    .prose p {
-        @apply leading-relaxed;
-    }
+  .workSlider .slick-dots li button:before {
+    font-size: 10px;
+    @apply text-black dark:text-white;
+  }
 
-    .prose h2 {
-        @apply text-3xl
-    }
+  .workSlider .slick-dots li.slick-active button:before {
+    font-size: 14px;
+    @apply text-black dark:text-white;
+  }
 
-    .prose ul {
-        @apply ml-4;
-    }
+  .testimonialSlider .slick-dots li button:before {
+    font-size: 10px;
+    @apply text-black;
+  }
 
-    .prose a {
-        @apply text-link-light-default hover:text-link-light-hover dark:text-link-dark-default dark:hover:text-link-dark-hover underline-offset-4 font-normal;
-    }
+  .testimonialSlider .slick-dots li.slick-active button:before {
+    font-size: 14px;
+    @apply text-black;
+  }
 
+  .bgSlider {
+    @apply absolute w-full h-full
+  }
+
+  .bgSlider .slick-list {
+    @apply h-full;
+  }
+
+  .bgSlider .slick-list .slick-slider {
+    @apply h-full;
+  }
+
+  .bgSlider .slick-list .slick-slider > div {
+    @apply h-full;
+  }
+
+  .bgSlider .slick-list .slick-slider > div > div {
+      @apply h-full;
+  }
+}
+
+@utility prose {
+  blockquote {
+    @apply my-12 lg:my-16 font-normal not-italic text-neutral-600 dark:text-neutral-400 pl-8 lg:pl-10 border-l-4 border-yellow-300 dark:border-yellow-400;
+  }
+
+  blockquote p {
+    @apply relative;
+  }
+
+  blockquote p:before {
+    @apply absolute -left-2 font-normal;
+  }
+
+  p {
+    @apply leading-relaxed;
+  }
+
+  h2 {
+    @apply text-3xl
+  }
+
+  ul {
+    @apply ml-4;
+  }
+
+  a {
+    @apply text-link-light-default hover:text-link-light-hover dark:text-link-dark-default dark:hover:text-link-dark-hover underline-offset-4 font-normal;
+  }
 }
